...
                tools:ignore="MissingConstraints" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout4"
            tools:ignore="NotSibling"
            tools:layout_editor_absoluteX="0dp">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/settings"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="98dp"
                android:layout_height="73dp"
                android:minWidth="0dp"
                app:backgroundTint="@color/white"
                app:icon="@drawable/ic_baseline_settings_24"
...
